Fix [pb alignements champs de formulaire] (#98)
- Corrections graphiques moteur à facettes et champs liés
- Correction d'une variable d'inclusion oubliée

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -248,7 +248,6 @@ input[type=radio],
 
 .ds44-labelStd {
      font-size: 1.4rem;
-     line-height: 1rem;
 }
 
 .ds44-labelLarge {
